--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <main>
         <div class="calculator-grid">
             <div class="output">
-                <div data-previous-operand class="previous-operand">132394 + </div>
-                <div data-current-operand class="current-operand">34345</div>
+                <div data-previous-operand class="previous-operand"></div>
+                <div data-current-operand class="current-operand"></div>
             </div>
             <button data-all-clear class="span-two">AC</button>
             <button data-delete>DEL</button>
